Remove dot character when replacing contextual enum with full name

Fixes https://bugs.swift.org/browse/SR-8147 issue by going back one character when suggesting fixit replacement of contextual enum with fully typed name.